testing/errors/userdefined2.a
	!serious "even the trees had been a bad move, no one should ever have left the oceans."
